# Auto_Diagram_Generator

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  INSTALL.md  INSTALL_TEST.md  LICENSE  README.md  README_Windows.md  SPECIFICATION.md  pyproject.toml  requirements.txt  requirements_ast_parsers.txt  setup.py  test_adg.py
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  AST_INTEGRATION_COMPLETE.md  AST_INTEGRATION_SUMMARY.md  AST_PARSER_REQUIREMENTS.md  CLI_USAGE.md  DEVELOPER_GUIDE.md  INSTALLATION_GUIDE.md  README.md  SECURITY.md  SECURITY_ENHANCEMENTS.md  SUPPORTED_FORMATS.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md
src/adg/: __init__.py
src/adg/cli/: __init__.py  command.py
src/adg/core/: analyzer.py  ast_analyzer_patches.py  ast_analyzers.py  ast_visitor.py  delphi_analyzer_wrapper.py  detector.py  integrated_analyzer.py  language_parsers.py  multi_language_analyzer.py  results.py  secure_analyzer.py  security_limits.py
src/adg/generators/: __init__.py  drawio_from_mermaid.py  mermaid.py  mermaid_auto_fix.py  mermaid_refactored.py
src/adg/utils/: mermaid_playwright_validator.py  mermaid_viewer.py  security.py  validation.py
